<resources>
    <string name="app_name">Notepad</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Notepad</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_view">View</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="fnew">New</string>
    <string name="fopen">Open</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="ver">Ver. 1.0</string>
    <string name="dev">Developer</string>
    <string name="devname">Pavel Vasilev</string>
    <string name="privatep">Private Policy</string>

    <string name="advanced">Advanced</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="entery">Entery</string>
    <string name="home_button">Exit</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>